// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CircleIconButton /> should correctly render HTML (or a component) that was inserted inside of the component using the innerElement prop 1`] = `
<div
  data-radium={true}
  id="mockId"
  onBlur={[Function]}
  onFocus={[Function]}
  role="button"
  style={
    Object {
      "border": "none",
      "borderRadius": "50%",
      "display": "inline-block",
      "outline": "none",
      "padding": 0,
      "position": "relative",
    }
  }
  tabIndex={0}
>
  <Icon
    id="mockId-icon"
    key=".0"
    name="config"
    onclick={[Function]}
    style={
      Array [
        Object {
          ":focus": Object {
            "border": "none",
          },
          "border": "none",
          "borderRadius": "50%",
          "display": "inline-block",
          "outline": "none",
          "padding": 0,
          "position": "relative",
        },
        undefined,
        undefined,
      ]
    }
  />
  <div
    key=".1"
  >
    <div>
      Inner Element
    </div>
  </div>
</div>
`;

exports[`<CircleIconButton /> should render correctly 1`] = `
<div
  data-radium={true}
  id="mockId"
  onBlur={[Function]}
  onFocus={[Function]}
  role="button"
  style={
    Object {
      "border": "none",
      "borderRadius": "50%",
      "display": "inline-block",
      "outline": "none",
      "padding": 0,
      "position": "relative",
    }
  }
  tabIndex={0}
>
  <Icon
    id="mockId-icon"
    key=".0"
    name="config"
    onclick={[Function]}
    style={
      Array [
        Object {
          ":focus": Object {
            "border": "none",
          },
          "border": "none",
          "borderRadius": "50%",
          "display": "inline-block",
          "outline": "none",
          "padding": 0,
          "position": "relative",
        },
        undefined,
        undefined,
      ]
    }
  />
</div>
`;
